New year, new copyright.

--- a/README
+++ b/README
@@ -4,9 +4,9 @@ In general
 This  package contains HP-41  programs to  convert Gregorian  dates to
 French Revolutionary dates.
 
-These programs are copyright (c)  2012, Jean Forget. They are released
-under the dual license GPL - Artistic License.  Please see the LICENSE
-file.
+These  programs are  copyright (c)  2012, 2013  Jean Forget.  They are
+released under  the dual license  GPL - Artistic License.   Please see
+the LICENSE file.
 
 Installation
 ------------
